--- a/extension/popup/css/custom-dropdown.css
+++ b/extension/popup/css/custom-dropdown.css
@@ -2,9 +2,9 @@
 .custom-dropdown {
     position: relative;
     width: 100%;
-    height: 23px;
+    height: 24px;
     background: #242424;
-    border-radius: 4px;
+    border-radius: 6px;
     cursor: pointer;
     user-select: none;
 }
@@ -15,7 +15,7 @@
     justify-content: space-between;
     padding: 0 8px;
     height: 100%;
-    border-radius: 4px;
+    border-radius: 6px;
     background: #242424;
     color: #FAFAFA;
     font-size: 11px;
@@ -23,6 +23,14 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+.theme-dark .selected-option {
+    border: 1px solid var(--border-primary-dark);
+}
+
+.theme-light .selected-option {
+    border: 1px solid var(--border-primary-light);
 }
 
 .custom-dropdown:hover .selected-option {
@@ -48,7 +56,7 @@
     left: 0;
     margin-top: 1px;
     background: #2c2c2c;
-    border-radius: 4px;
+    border-radius: 6px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     z-index: 100;
     max-height: 0;
@@ -81,7 +89,7 @@
 /* Simple dropdown options */
 .dropdown-option {
     padding: 8px;
-    color: #999;
+    color: var(--text-secondary-dark);
     font-size: 11px;
     transition: background-color 0.1s;
     overflow: hidden;
@@ -95,8 +103,9 @@
     color: #FAFAFA;
 }
 
-.dropdown-option:hover {
+.dropdown-option:not(.selected):hover {
     position: relative;
+    color: var(--text-secondary-dark-hover);
     background: #3a3a3a;
     box-shadow: 0 0 0 1px #1976D2;
 }
@@ -165,7 +174,7 @@
     align-items: center;
     padding: 6px 4px;
     font-size: 11px;
-    color: #999;
+    color: var(--text-secondary-dark);
     cursor: pointer;
     transition: background-color 0.1s;
     border-radius: 2px;
@@ -175,6 +184,7 @@
     position: relative;
     min-width: 100%;
     width: fit-content;
+    color: var(--text-secondary-dark-hover);
     background: #3a3a3a;
     box-shadow: 0 0 0 1px #1976D2;
 }
@@ -212,7 +222,7 @@
     background: #2196F3;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 6px;
     font-size: 13px;
     cursor: pointer;
     transition: background-color 0.2s;
