--- a/extension/popup/css/layout.css
+++ b/extension/popup/css/layout.css
@@ -18,7 +18,6 @@
     text-align: center;
     font-size: 14px;
     padding: 16px;
-    transition: color 0.3s;
 }
 
 .theme-dark .initial-message,
@@ -55,7 +54,6 @@
     height: 100%;
     scroll-behavior: smooth;
     padding: 0;
-    transition: background-color 0.3s;
     position: relative;
     scrollbar-gutter: stable;
 }
@@ -66,11 +64,11 @@
 }
 
 .theme-dark #videos {
-    background-color: #1e1e1e;
+    background-color: var(--bg-primary-dark);
 }
 
 .theme-light #videos {
-    background-color: #f9f9f9;
+    background-color: var(--bg-primary-light);
 }
 
 /* Responsive adjustments for smaller screens */
