--- a/extension/popup/css/variables.css
+++ b/extension/popup/css/variables.css
@@ -3,39 +3,45 @@
 /* Primary Colors */
 :root {
     /* Primary Blue Scheme */
-    --color-primary: #1976D2;
-    --color-primary-hover: #1565C0;
+    --color-primary: #037AFB;
+    --color-primary-hover: #0369d6;
     
     /* Error/Stop Red Scheme */
-    --color-error: #d32f2f;
+    --color-error: #C62828;
     --color-error-hover: #b71c1c;
     
     /* Success Green Scheme */
     --color-success: #43A047;
+    --color-success-hover: #27642a;
     
     /* Warning Orange Scheme */
     --color-warning: #FF5722;
     --color-warning-hover: #E64A19;
     
-    /* Background Colors - Dark Theme */
-    --bg-primary-dark: #121212;
-    --bg-hover-dark: #3d3d3d;
+    /* Dark Theme */
+    --bg-primary-dark: #242424;
+    --bg-hover-dark: #323232;
+    --bg-active-dark: #5E5E5E;
+    --bg-secondary-dark: #1E1E1E;
     
-    /* Background Colors - Light Theme */
+    --border-primary-dark: #61616133;
+
+    --text-primary-dark: #FAFAFA;
+    --text-secondary-dark: #666;
+    --text-secondary-dark-hover: #999;
+
+    /* Light Theme */
     --bg-primary-light: #f5f5f5;
     --bg-hover-light: #f5f5f5;
+    --bg-active-light: #f5f5f5;
+    --bg-secondary-light: #f5f5f5;
     
-    /* Text Colors - Dark Theme */
-    --text-primary-dark: #FAFAFA;
-    --text-secondary-dark: #aaa;
-    
-    /* Text Colors - Light Theme */
+
     --text-primary-light: #333;
     --text-secondary-light: #666;
+    --text-secondary-light-hover: #999;
     --text-title-light: #1a73e8;
-    
-    /* Border Colors */
-    --border-primary-dark: #333;
+
     --border-primary-light: #e0e0e0;
     
     /* Transition Timings */
