--- a/extension/popup/css/video-items.css
+++ b/extension/popup/css/video-items.css
@@ -3,22 +3,19 @@
     display: flex;
     margin-bottom: 2px;
     padding: 6px;
-    transition: background-color 0.3s, border-color 0.3s;
-    align-items: flex-start;
+    margin: 8px;
+    border-radius: 16px;
 }
 
 .theme-dark .video-item {
-    background-color: #252525;
-    border-bottom: 1px solid #333;
+    background-color: var(--bg-secondary-dark);
+    border: var(--border-primary-dark) 1px solid;
 }
 
 .theme-light .video-item {
     background-color: white;
-    border-bottom: 1px solid #eee;
-}
-
-.video-item:last-child {
-    border-bottom: none;
+    background-color: var(--bg-secondary-light);
+    border: var(--border-primary-light) 1px solid;
 }
 
 .preview-column {
@@ -31,12 +28,12 @@
     position: relative;
     width: 100px;
     height: 62px;
-    border-radius: 4px;
+    border-radius: 6px;
     overflow: hidden;
 }
 
 .theme-dark .preview-container {
-    background-color: #333;
+    background-color: var(--bg-primary-dark);
 }
 
 .theme-light .preview-container {
@@ -79,6 +76,7 @@
     min-width: 0;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 /* Title Row */
